--- a/Resultados.ipynb
+++ b/Resultados.ipynb
@@ -3824,7 +3824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3864,6 +3864,411 @@
     "        if name.endswith('.model'):\n",
     "            embedding = KeyedVectors.load(dst)\n",
     "            result.append(embedding.most_similar('unk'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = []\n",
+    "for path, subdirs, files in os.walk(EMBEDDINGS_DIR):\n",
+    "    for name in files:\n",
+    "        dst = path + '/' + name\n",
+    "        if name.endswith('.model'):\n",
+    "            label = path.split('/')[-1] + '_' + name.rstrip('.model')\n",
+    "            labels.append(label)\n",
+    "\n",
+    "rows = []\n",
+    "cols = [ [x[0] for x in y ] for y in result]\n",
+    "for entry in range(len(cols[0])):\n",
+    "    row = {}\n",
+    "    for idx,item in enumerate(cols):\n",
+    "        row[labels[idx]] = cols[idx].pop(0)\n",
+    "    rows.append(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fasttext_cbow_s100</th>\n",
+       "      <th>fasttext_cbow_s1000</th>\n",
+       "      <th>fasttext_cbow_s300</th>\n",
+       "      <th>fasttext_cbow_s50</th>\n",
+       "      <th>fasttext_cbow_s600</th>\n",
+       "      <th>fasttext_skip_s100</th>\n",
+       "      <th>fasttext_skip_s1000</th>\n",
+       "      <th>fasttext_skip_s300</th>\n",
+       "      <th>fasttext_skip_s50</th>\n",
+       "      <th>fasttext_skip_s600</th>\n",
+       "      <th>...</th>\n",
+       "      <th>word2vec_cbow_s100</th>\n",
+       "      <th>word2vec_cbow_s1000</th>\n",
+       "      <th>word2vec_cbow_s300</th>\n",
+       "      <th>word2vec_cbow_s50</th>\n",
+       "      <th>word2vec_cbow_s600</th>\n",
+       "      <th>word2vec_skip_s100</th>\n",
+       "      <th>word2vec_skip_s1000</th>\n",
+       "      <th>word2vec_skip_s300</th>\n",
+       "      <th>word2vec_skip_s50</th>\n",
+       "      <th>word2vec_skip_s600</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>slunk</td>\n",
+       "      <td>sunk</td>\n",
+       "      <td>slunk</td>\n",
+       "      <td>g-funk</td>\n",
+       "      <td>grunk</td>\n",
+       "      <td>sexfunk</td>\n",
+       "      <td>gunk</td>\n",
+       "      <td>gunk</td>\n",
+       "      <td>painkiller</td>\n",
+       "      <td>gunk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>disfunã§ã£o</td>\n",
+       "      <td>lemniscata</td>\n",
+       "      <td>mundo-0000</td>\n",
+       "      <td>adels</td>\n",
+       "      <td>mundo-0000</td>\n",
+       "      <td>dresta</td>\n",
+       "      <td>inexplicable</td>\n",
+       "      <td>chiii</td>\n",
+       "      <td>objection</td>\n",
+       "      <td>chiii</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>g-funk</td>\n",
+       "      <td>gunk</td>\n",
+       "      <td>grunk</td>\n",
+       "      <td>spunk</td>\n",
+       "      <td>slunk</td>\n",
+       "      <td>goddamned</td>\n",
+       "      <td>sunk</td>\n",
+       "      <td>sexfunk</td>\n",
+       "      <td>afterlife</td>\n",
+       "      <td>sexfunk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0:0,00</td>\n",
+       "      <td>estarrecer</td>\n",
+       "      <td>lmkv</td>\n",
+       "      <td>crupo</td>\n",
+       "      <td>consp</td>\n",
+       "      <td>dixanadu</td>\n",
+       "      <td>awolnation</td>\n",
+       "      <td>shasha</td>\n",
+       "      <td>ji-sub</td>\n",
+       "      <td>genteel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>synthpunk</td>\n",
+       "      <td>grunk</td>\n",
+       "      <td>g-funk</td>\n",
+       "      <td>b-rock</td>\n",
+       "      <td>cowpunk</td>\n",
+       "      <td>bloodpop</td>\n",
+       "      <td>tunk</td>\n",
+       "      <td>unkle</td>\n",
+       "      <td>flaming</td>\n",
+       "      <td>sunk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>groaning</td>\n",
+       "      <td>bollebygd</td>\n",
+       "      <td>u.s.o</td>\n",
+       "      <td>cafil</td>\n",
+       "      <td>onemba</td>\n",
+       "      <td>begotten</td>\n",
+       "      <td>attacking</td>\n",
+       "      <td>kibou</td>\n",
+       "      <td>magiam</td>\n",
+       "      <td>whatta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cowpunk</td>\n",
+       "      <td>slunk</td>\n",
+       "      <td>p-funk</td>\n",
+       "      <td>grunk</td>\n",
+       "      <td>spunk</td>\n",
+       "      <td>blinking</td>\n",
+       "      <td>sexfunk</td>\n",
+       "      <td>underdunk</td>\n",
+       "      <td>bloodpop</td>\n",
+       "      <td>crunk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>000hab</td>\n",
+       "      <td>cesf</td>\n",
+       "      <td>cãºmulo</td>\n",
+       "      <td>agarrador</td>\n",
+       "      <td>climatério</td>\n",
+       "      <td>tonik</td>\n",
+       "      <td>weaker</td>\n",
+       "      <td>coelis</td>\n",
+       "      <td>beethoven's</td>\n",
+       "      <td>repent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>grunk</td>\n",
+       "      <td>spunk</td>\n",
+       "      <td>crunk</td>\n",
+       "      <td>slunk</td>\n",
+       "      <td>punk-funk</td>\n",
+       "      <td>bloodied</td>\n",
+       "      <td>pop/punk</td>\n",
+       "      <td>spunk</td>\n",
+       "      <td>hiphoprisy</td>\n",
+       "      <td>tunk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>realvideo</td>\n",
+       "      <td>jelincic</td>\n",
+       "      <td>gaivota-tridáctila</td>\n",
+       "      <td>não-dador</td>\n",
+       "      <td>kālidāsa</td>\n",
+       "      <td>wetting</td>\n",
+       "      <td>discern</td>\n",
+       "      <td>hyperbole</td>\n",
+       "      <td>refrigerator</td>\n",
+       "      <td>(sem</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>g-punk</td>\n",
+       "      <td>crunk</td>\n",
+       "      <td>spunk</td>\n",
+       "      <td>0beat</td>\n",
+       "      <td>crunk</td>\n",
+       "      <td>unkle</td>\n",
+       "      <td>crunk</td>\n",
+       "      <td>crunk</td>\n",
+       "      <td>unknow</td>\n",
+       "      <td>slunk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>gingko</td>\n",
+       "      <td>ostrołęcki</td>\n",
+       "      <td>substantividade</td>\n",
+       "      <td>huffpo</td>\n",
+       "      <td>lmkv</td>\n",
+       "      <td>devlins</td>\n",
+       "      <td>strides</td>\n",
+       "      <td>mockery</td>\n",
+       "      <td>yagni</td>\n",
+       "      <td>transmigration</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>crunk</td>\n",
+       "      <td>cowpunk</td>\n",
+       "      <td>cowpunk</td>\n",
+       "      <td>synthpunk</td>\n",
+       "      <td>gunk</td>\n",
+       "      <td>bollocks</td>\n",
+       "      <td>slunk</td>\n",
+       "      <td>unknowns</td>\n",
+       "      <td>goddamned</td>\n",
+       "      <td>unkle</td>\n",
+       "      <td>...</td>\n",
+       "      <td>mesmo000</td>\n",
+       "      <td>perder-te</td>\n",
+       "      <td>consp</td>\n",
+       "      <td>snappamatic</td>\n",
+       "      <td>anti-banner</td>\n",
+       "      <td>horrorpops</td>\n",
+       "      <td>betray</td>\n",
+       "      <td>cmon</td>\n",
+       "      <td>crazy/beautiful</td>\n",
+       "      <td>attacking</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>spunk</td>\n",
+       "      <td>punk-funk</td>\n",
+       "      <td>underdunk</td>\n",
+       "      <td>cowpunk</td>\n",
+       "      <td>g-funk</td>\n",
+       "      <td>truth</td>\n",
+       "      <td>punk-funk</td>\n",
+       "      <td>unknow</td>\n",
+       "      <td>sideonedummy</td>\n",
+       "      <td>punk-funk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>brainer</td>\n",
+       "      <td>atencipação</td>\n",
+       "      <td>zugerberg</td>\n",
+       "      <td>parecer0</td>\n",
+       "      <td>d.p.r</td>\n",
+       "      <td>swarthout</td>\n",
+       "      <td>turpentine</td>\n",
+       "      <td>nirou</td>\n",
+       "      <td>candleford</td>\n",
+       "      <td>homeboys</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>punk-funk</td>\n",
+       "      <td>g-punk</td>\n",
+       "      <td>g-punk</td>\n",
+       "      <td>unkind</td>\n",
+       "      <td>underdunk</td>\n",
+       "      <td>undergound</td>\n",
+       "      <td>g-punk</td>\n",
+       "      <td>dance-punk</td>\n",
+       "      <td>hearty</td>\n",
+       "      <td>spunk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>pã³quer</td>\n",
+       "      <td>qazakh</td>\n",
+       "      <td>fiestar</td>\n",
+       "      <td>stormer</td>\n",
+       "      <td>molinologia</td>\n",
+       "      <td>guirlande</td>\n",
+       "      <td>impatience</td>\n",
+       "      <td>cyclists</td>\n",
+       "      <td>elopement</td>\n",
+       "      <td>portrayed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>unkle</td>\n",
+       "      <td>hunk</td>\n",
+       "      <td>punk-funk</td>\n",
+       "      <td>war-rock</td>\n",
+       "      <td>p-funk</td>\n",
+       "      <td>screaming</td>\n",
+       "      <td>spunk</td>\n",
+       "      <td>pop-punk</td>\n",
+       "      <td>psychotic</td>\n",
+       "      <td>pop/punk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>neithhotep</td>\n",
+       "      <td>anfpc</td>\n",
+       "      <td>idiota-prodígio</td>\n",
+       "      <td>mysticismo</td>\n",
+       "      <td>finição</td>\n",
+       "      <td>pikul</td>\n",
+       "      <td>deceived</td>\n",
+       "      <td>propellerheads</td>\n",
+       "      <td>what(ever</td>\n",
+       "      <td>cyclists</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  fasttext_cbow_s100 fasttext_cbow_s1000 fasttext_cbow_s300 fasttext_cbow_s50  \\\n",
+       "0              slunk                sunk              slunk            g-funk   \n",
+       "1             g-funk                gunk              grunk             spunk   \n",
+       "2          synthpunk               grunk             g-funk            b-rock   \n",
+       "3            cowpunk               slunk             p-funk             grunk   \n",
+       "4              grunk               spunk              crunk             slunk   \n",
+       "5             g-punk               crunk              spunk             0beat   \n",
+       "6              crunk             cowpunk            cowpunk         synthpunk   \n",
+       "7              spunk           punk-funk          underdunk           cowpunk   \n",
+       "8          punk-funk              g-punk             g-punk            unkind   \n",
+       "9              unkle                hunk          punk-funk          war-rock   \n",
+       "\n",
+       "  fasttext_cbow_s600 fasttext_skip_s100 fasttext_skip_s1000  \\\n",
+       "0              grunk            sexfunk                gunk   \n",
+       "1              slunk          goddamned                sunk   \n",
+       "2            cowpunk           bloodpop                tunk   \n",
+       "3              spunk           blinking             sexfunk   \n",
+       "4          punk-funk           bloodied            pop/punk   \n",
+       "5              crunk              unkle               crunk   \n",
+       "6               gunk           bollocks               slunk   \n",
+       "7             g-funk              truth           punk-funk   \n",
+       "8          underdunk         undergound              g-punk   \n",
+       "9             p-funk          screaming               spunk   \n",
+       "\n",
+       "  fasttext_skip_s300 fasttext_skip_s50 fasttext_skip_s600  ...  \\\n",
+       "0               gunk        painkiller               gunk  ...   \n",
+       "1            sexfunk         afterlife            sexfunk  ...   \n",
+       "2              unkle           flaming               sunk  ...   \n",
+       "3          underdunk          bloodpop              crunk  ...   \n",
+       "4              spunk        hiphoprisy               tunk  ...   \n",
+       "5              crunk            unknow              slunk  ...   \n",
+       "6           unknowns         goddamned              unkle  ...   \n",
+       "7             unknow      sideonedummy          punk-funk  ...   \n",
+       "8         dance-punk            hearty              spunk  ...   \n",
+       "9           pop-punk         psychotic           pop/punk  ...   \n",
+       "\n",
+       "  word2vec_cbow_s100 word2vec_cbow_s1000  word2vec_cbow_s300  \\\n",
+       "0        disfunã§ã£o          lemniscata          mundo-0000   \n",
+       "1             0:0,00          estarrecer                lmkv   \n",
+       "2           groaning           bollebygd               u.s.o   \n",
+       "3             000hab                cesf             cãºmulo   \n",
+       "4          realvideo            jelincic  gaivota-tridáctila   \n",
+       "5             gingko          ostrołęcki     substantividade   \n",
+       "6           mesmo000           perder-te               consp   \n",
+       "7            brainer         atencipação           zugerberg   \n",
+       "8            pã³quer              qazakh             fiestar   \n",
+       "9         neithhotep               anfpc     idiota-prodígio   \n",
+       "\n",
+       "  word2vec_cbow_s50 word2vec_cbow_s600 word2vec_skip_s100 word2vec_skip_s1000  \\\n",
+       "0             adels         mundo-0000             dresta        inexplicable   \n",
+       "1             crupo              consp           dixanadu          awolnation   \n",
+       "2             cafil             onemba           begotten           attacking   \n",
+       "3         agarrador         climatério              tonik              weaker   \n",
+       "4         não-dador           kālidāsa            wetting             discern   \n",
+       "5            huffpo               lmkv            devlins             strides   \n",
+       "6       snappamatic        anti-banner         horrorpops              betray   \n",
+       "7          parecer0              d.p.r          swarthout          turpentine   \n",
+       "8           stormer        molinologia          guirlande          impatience   \n",
+       "9        mysticismo            finição              pikul            deceived   \n",
+       "\n",
+       "  word2vec_skip_s300 word2vec_skip_s50 word2vec_skip_s600  \n",
+       "0              chiii         objection              chiii  \n",
+       "1             shasha            ji-sub            genteel  \n",
+       "2              kibou            magiam             whatta  \n",
+       "3             coelis       beethoven's             repent  \n",
+       "4          hyperbole      refrigerator               (sem  \n",
+       "5            mockery             yagni     transmigration  \n",
+       "6               cmon   crazy/beautiful          attacking  \n",
+       "7              nirou        candleford           homeboys  \n",
+       "8           cyclists         elopement          portrayed  \n",
+       "9     propellerheads         what(ever           cyclists  \n",
+       "\n",
+       "[10 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(rows)\n",
+    "df.to_csv('the_unk_bug.csv', index=False)\n",
+    "df"
    ]
   },
   {
