--- a/paper/references.bib
+++ b/paper/references.bib
@@ -12,3 +12,12 @@
   author={Flavio Massimiliano Cecchini},
   year={2017}
 }
+
+@misc{gehrmann2019improving,
+    title={Improving Human Text Comprehension through Semi-Markov CRF-based Neural Section Title Generation},
+    author={Sebastian Gehrmann and Steven Layne and Franck Dernoncourt},
+    year={2019},
+    eprint={1904.07142},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL}
+}
