--- a/paper/SBC/modelosparapublicaodeartigos/Template_SBC/template-latex/sbc-template.bib
+++ b/paper/SBC/modelosparapublicaodeartigos/Template_SBC/template-latex/sbc-template.bib
@@ -12,3 +12,21 @@
   author={Flavio Massimiliano Cecchini},
   year={2017}
 }
+
+@inproceedings{castro,
+author = {Castro, Pedro and Felix, Nadia and Soares, Anderson},
+year = {2019},
+month = {09},
+pages = {},
+title = {Contextual Representations and Semi-Supervised Named Entity Recognition for Portuguese Language}
+}
+
+@article{assin,
+author = {Hartmann, N.S.},
+year = {2016},
+month = {12},
+pages = {59-64},
+title = {Solo queue at ASSIN: Mix of traditional and emerging approaches},
+volume = {8},
+journal = {Linguamatica}
+}
