--- a/etc/results/Resultados.ipynb
+++ b/etc/results/Resultados.ipynb
@@ -141,6 +141,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>modelo</th>\n",
+       "      <th>Pearson</th>\n",
+       "      <th>dataset</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ELMo ( Wikipedia )</td>\n",
+       "      <td>0.587910</td>\n",
+       "      <td>assin1, pt-br</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ELMo ( Wikipedia )</td>\n",
+       "      <td>0.593352</td>\n",
+       "      <td>assin1, pt-eu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ELMo ( Wikipedia + BRWAC )</td>\n",
+       "      <td>0.579098</td>\n",
+       "      <td>assin1, pt-br</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ELMo ( Wikipedia + BRWAC )</td>\n",
+       "      <td>0.575566</td>\n",
+       "      <td>assin1, pt-eu</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       modelo   Pearson        dataset\n",
+       "0          ELMo ( Wikipedia )  0.587910  assin1, pt-br\n",
+       "1          ELMo ( Wikipedia )  0.593352  assin1, pt-eu\n",
+       "2  ELMo ( Wikipedia + BRWAC )  0.579098  assin1, pt-br\n",
+       "3  ELMo ( Wikipedia + BRWAC )  0.575566  assin1, pt-eu"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dataplot = [\n",
+    "    {\n",
+    "        \"modelo\" : \"ELMo ( Wikipedia )\",\n",
+    "        \"Pearson\": 0.587910,\n",
+    "        \"dataset\": \"assin1, pt-br\"\n",
+    "    },\n",
+    "    { \"modelo\" : \"ELMo ( Wikipedia )\",\n",
+    "        \"Pearson\": 0.593352,\n",
+    "        \"dataset\": \"assin1, pt-eu\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"modelo\" : \"ELMo ( Wikipedia + BRWAC )\",\n",
+    "        \"Pearson\": 0.579098,\n",
+    "        \"dataset\": \"assin1, pt-br\"\n",
+    "    },\n",
+    "    { \"modelo\" : \"ELMo ( Wikipedia + BRWAC )\",\n",
+    "        \"Pearson\": 0.575566,\n",
+    "        \"dataset\": \"assin1, pt-eu\"\n",
+    "    },    \n",
+    "]\n",
+    "\n",
+    "df = pd.DataFrame(dataplot)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
    "outputs": [],
