--- a/sentence_similarity/results/Untitled.ipynb
+++ b/sentence_similarity/results/Untitled.ipynb
@@ -891,6 +891,7 @@
     "    dataplot = dataplot.drop(columns='same')\n",
     "    dataplot['pearson_diff'] = dataplot['pearson_x'] - dataplot['pearson_y']\n",
     "    dataplot = dataplot.sort_values(by='pearson_diff', ascending=False)\n",
+    "    dataplot['pearson_diff'] = dataplot['pearson_diff'].apply(lambda x: round(x, 3))\n",
     "    return dataplot\n",
     "\n",
     "diff_unk(retrieve_results(chosen_language='pteu'), status=True).sample(10)"
