--- a/notebooks/views.ipynb
+++ b/notebooks/views.ipynb
@@ -566,6 +566,147 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>PCC</th>\n",
+       "      <th>MSE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dataset</th>\n",
+       "      <th>ELMo</th>\n",
+       "      <th>embedding</th>\n",
+       "      <th>unk</th>\n",
+       "      <th>architecture</th>\n",
+       "      <th>dimensions</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">ASSIN ( pt-BR )</th>\n",
+       "      <th rowspan=\"3\" valign=\"top\">wiki (reduced)</th>\n",
+       "      <th rowspan=\"3\" valign=\"top\">word2vec</th>\n",
+       "      <th rowspan=\"3\" valign=\"top\">False</th>\n",
+       "      <th rowspan=\"3\" valign=\"top\">skip-gram</th>\n",
+       "      <th>50</th>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">ASSIN ( pt-PT )</th>\n",
+       "      <th rowspan=\"3\" valign=\"top\">wiki (reduced)</th>\n",
+       "      <th rowspan=\"3\" valign=\"top\">word2vec</th>\n",
+       "      <th rowspan=\"3\" valign=\"top\">False</th>\n",
+       "      <th rowspan=\"3\" valign=\"top\">skip-gram</th>\n",
+       "      <th>50</th>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">ASSIN 2</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">wiki (reduced)</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">word2vec</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">False</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">skip-gram</th>\n",
+       "      <th>50</th>\n",
+       "      <td>0.57</td>\n",
+       "      <td>1.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>0.57</td>\n",
+       "      <td>1.92</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                         PCC  \\\n",
+       "dataset         ELMo           embedding unk   architecture dimensions         \n",
+       "ASSIN ( pt-BR ) wiki (reduced) word2vec  False skip-gram    50          0.61   \n",
+       "                                                            100         0.62   \n",
+       "                                                            300         0.62   \n",
+       "ASSIN ( pt-PT ) wiki (reduced) word2vec  False skip-gram    50          0.62   \n",
+       "                                                            100         0.62   \n",
+       "                                                            300         0.62   \n",
+       "ASSIN 2         wiki (reduced) word2vec  False skip-gram    50          0.57   \n",
+       "                                                            100         0.57   \n",
+       "\n",
+       "                                                                         MSE  \n",
+       "dataset         ELMo           embedding unk   architecture dimensions        \n",
+       "ASSIN ( pt-BR ) wiki (reduced) word2vec  False skip-gram    50          0.47  \n",
+       "                                                            100         0.47  \n",
+       "                                                            300         0.47  \n",
+       "ASSIN ( pt-PT ) wiki (reduced) word2vec  False skip-gram    50          0.75  \n",
+       "                                                            100         0.74  \n",
+       "                                                            300         0.74  \n",
+       "ASSIN 2         wiki (reduced) word2vec  False skip-gram    50          1.93  \n",
+       "                                                            100         1.92  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view = df\n",
+    "view = view[((view.index.get_level_values('embedding')=='word2vec') &\\\n",
+    "           (view.index.get_level_values('architecture')=='skip-gram'))]\n",
+    "view"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
